src/java/com/wrangling/antlr/D2wlParser.java
// Generated from /Users/tsvetanminkov/git/data-wrangling-compiler/src/main/grammar/D2wl.g4 by ANTLR 4.7.2
package com.wrangling.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class D2wlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, SCOL=2, DOT=3, OPEN_PAR=4, CLOSE_PAR=5, COMMA=6, EQ=7, STAR=8, 
		PLUS=9, MINUS=10, TILDE=11, PIPE2=12, DIV=13, MOD=14, LT2=15, GT2=16, 
		AMP=17, PIPE=18, LT=19, LT_EQ=20, GT=21, GT_EQ=22, NOT_EQ1=23, NOT_EQ2=24, 
		SELECT=25, FROM=26, TO=27, WHERE=28, WRANGLE=29, GROUP=30, BY=31, AS=32, 
		AND=33, OR=34, UNION=35, JOIN=36, ON=37, IMPORT=38, IDENTIFIER=39, TIME_LITERAL=40, 
		COL=41, NUMERIC_LITERAL=42, STRING_LITERAL=43, SPACES=44;
	public static final int
		RULE_query = 0, RULE_group_clause = 1, RULE_wrangle_clause = 2, RULE_wrangle_list = 3, 
		RULE_wrangle_operation = 4, RULE_union_operation = 5, RULE_spatial_join = 6, 
		RULE_atom_list = 7, RULE_file_name = 8, RULE_where_clause = 9, RULE_condition_list = 10, 
		RULE_formula = 11, RULE_atom = 12, RULE_disjunction = 13, RULE_left_operand = 14, 
		RULE_right_operand = 15, RULE_literal_value = 16, RULE_quoted_numeric_literal = 17, 
		RULE_table_column = 18, RULE_comparison_operator = 19, RULE_to_clause = 20, 
		RULE_to_location = 21, RULE_from_clause = 22, RULE_from_list = 23, RULE_from_location = 24, 
		RULE_select_clause = 25, RULE_select_argument = 26, RULE_function_call = 27, 
		RULE_function_argument = 28, RULE_literal_argument = 29, RULE_import_list = 30, 
		RULE_imported_function = 31, RULE_url = 32, RULE_extension = 33, RULE_name_alias = 34, 
		RULE_column_name = 35, RULE_table_name = 36, RULE_name = 37, RULE_function_name = 38, 
		RULE_any_name = 39, RULE_keyword = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "group_clause", "wrangle_clause", "wrangle_list", "wrangle_operation", 
			"union_operation", "spatial_join", "atom_list", "file_name", "where_clause", 
			"condition_list", "formula", "atom", "disjunction", "left_operand", "right_operand", 
			"literal_value", "quoted_numeric_literal", "table_column", "comparison_operator", 
			"to_clause", "to_location", "from_clause", "from_list", "from_location", 
			"select_clause", "select_argument", "function_call", "function_argument", 
			"literal_argument", "import_list", "imported_function", "url", "extension", 
			"name_alias", "column_name", "table_name", "name", "function_name", "any_name", 
			"keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'''", "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", 
			"'-'", "'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", 
			"'<='", "'>'", "'>='", "'!='", "'<>'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "EQ", "STAR", 
			"PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", "AMP", 
			"PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "NOT_EQ1", "NOT_EQ2", "SELECT", 
			"FROM", "TO", "WHERE", "WRANGLE", "GROUP", "BY", "AS", "AND", "OR", "UNION", 
			"JOIN", "ON", "IMPORT", "IDENTIFIER", "TIME_LITERAL", "COL", "NUMERIC_LITERAL", 
			"STRING_LITERAL", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "D2wl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public D2wlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public Select_clauseContext select_clause() {
			return getRuleContext(Select_clauseContext.class,0);
		}
		public From_clauseContext from_clause() {
			return getRuleContext(From_clauseContext.class,0);
		}
		public To_clauseContext to_clause() {
			return getRuleContext(To_clauseContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Wrangle_clauseContext wrangle_clause() {
			return getRuleContext(Wrangle_clauseContext.class,0);
		}
		public TerminalNode SCOL() { return getToken(D2wlParser.SCOL, 0); }
		public Import_listContext import_list() {
			return getRuleContext(Import_listContext.class,0);
		}
		public Group_clauseContext group_clause() {
			return getRuleContext(Group_clauseContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IMPORT) {
				{
				setState(82);
				import_list();
				}
			}

			setState(85);
			select_clause();
			setState(86);
			from_clause();
			setState(87);
			to_clause();
			setState(88);
			where_clause();
			setState(89);
			wrangle_clause();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(90);
				group_clause();
				}
			}

			setState(93);
			match(SCOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Group_clauseContext extends ParserRuleContext {
		public TerminalNode GROUP() { return getToken(D2wlParser.GROUP, 0); }
		public TerminalNode BY() { return getToken(D2wlParser.BY, 0); }
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Group_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterGroup_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitGroup_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitGroup_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Group_clauseContext group_clause() throws RecognitionException {
		Group_clauseContext _localctx = new Group_clauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_group_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(GROUP);
			setState(96);
			match(BY);
			setState(97);
			function_call();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Wrangle_clauseContext extends ParserRuleContext {
		public TerminalNode WRANGLE() { return getToken(D2wlParser.WRANGLE, 0); }
		public TerminalNode BY() { return getToken(D2wlParser.BY, 0); }
		public Wrangle_listContext wrangle_list() {
			return getRuleContext(Wrangle_listContext.class,0);
		}
		public Wrangle_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrangle_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterWrangle_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitWrangle_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitWrangle_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wrangle_clauseContext wrangle_clause() throws RecognitionException {
		Wrangle_clauseContext _localctx = new Wrangle_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_wrangle_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(WRANGLE);
			setState(100);
			match(BY);
			setState(101);
			wrangle_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Wrangle_listContext extends ParserRuleContext {
		public List<Wrangle_operationContext> wrangle_operation() {
			return getRuleContexts(Wrangle_operationContext.class);
		}
		public Wrangle_operationContext wrangle_operation(int i) {
			return getRuleContext(Wrangle_operationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(D2wlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(D2wlParser.COMMA, i);
		}
		public Wrangle_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrangle_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterWrangle_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitWrangle_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitWrangle_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wrangle_listContext wrangle_list() throws RecognitionException {
		Wrangle_listContext _localctx = new Wrangle_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_wrangle_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			wrangle_operation();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				wrangle_operation();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Wrangle_operationContext extends ParserRuleContext {
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Union_operationContext union_operation() {
			return getRuleContext(Union_operationContext.class,0);
		}
		public Spatial_joinContext spatial_join() {
			return getRuleContext(Spatial_joinContext.class,0);
		}
		public Wrangle_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wrangle_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterWrangle_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitWrangle_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitWrangle_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Wrangle_operationContext wrangle_operation() throws RecognitionException {
		Wrangle_operationContext _localctx = new Wrangle_operationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_wrangle_operation);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				function_call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				union_operation();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				spatial_join();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Union_operationContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(D2wlParser.OPEN_PAR, 0); }
		public List<File_nameContext> file_name() {
			return getRuleContexts(File_nameContext.class);
		}
		public File_nameContext file_name(int i) {
			return getRuleContext(File_nameContext.class,i);
		}
		public TerminalNode UNION() { return getToken(D2wlParser.UNION, 0); }
		public TerminalNode CLOSE_PAR() { return getToken(D2wlParser.CLOSE_PAR, 0); }
		public Union_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterUnion_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitUnion_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitUnion_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Union_operationContext union_operation() throws RecognitionException {
		Union_operationContext _localctx = new Union_operationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_union_operation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(OPEN_PAR);
			setState(117);
			file_name();
			setState(118);
			match(UNION);
			setState(119);
			file_name();
			setState(120);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Spatial_joinContext extends ParserRuleContext {
		public List<TerminalNode> OPEN_PAR() { return getTokens(D2wlParser.OPEN_PAR); }
		public TerminalNode OPEN_PAR(int i) {
			return getToken(D2wlParser.OPEN_PAR, i);
		}
		public List<File_nameContext> file_name() {
			return getRuleContexts(File_nameContext.class);
		}
		public File_nameContext file_name(int i) {
			return getRuleContext(File_nameContext.class,i);
		}
		public TerminalNode JOIN() { return getToken(D2wlParser.JOIN, 0); }
		public TerminalNode ON() { return getToken(D2wlParser.ON, 0); }
		public Atom_listContext atom_list() {
			return getRuleContext(Atom_listContext.class,0);
		}
		public List<TerminalNode> CLOSE_PAR() { return getTokens(D2wlParser.CLOSE_PAR); }
		public TerminalNode CLOSE_PAR(int i) {
			return getToken(D2wlParser.CLOSE_PAR, i);
		}
		public TerminalNode AS() { return getToken(D2wlParser.AS, 0); }
		public Spatial_joinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spatial_join; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterSpatial_join(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitSpatial_join(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitSpatial_join(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Spatial_joinContext spatial_join() throws RecognitionException {
		Spatial_joinContext _localctx = new Spatial_joinContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_spatial_join);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(OPEN_PAR);
			setState(123);
			file_name();
			setState(124);
			match(JOIN);
			setState(125);
			file_name();
			setState(126);
			match(ON);
			setState(127);
			match(OPEN_PAR);
			setState(128);
			atom_list();
			setState(129);
			match(CLOSE_PAR);
			setState(130);
			match(CLOSE_PAR);
			setState(131);
			match(AS);
			setState(132);
			file_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_listContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(D2wlParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(D2wlParser.AND, i);
		}
		public Atom_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterAtom_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitAtom_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitAtom_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Atom_listContext atom_list() throws RecognitionException {
		Atom_listContext _localctx = new Atom_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atom_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			atom();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(135);
				match(AND);
				setState(136);
				atom();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_nameContext extends ParserRuleContext {
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public File_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterFile_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitFile_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitFile_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_nameContext file_name() throws RecognitionException {
		File_nameContext _localctx = new File_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_file_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			any_name(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Where_clauseContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(D2wlParser.WHERE, 0); }
		public Condition_listContext condition_list() {
			return getRuleContext(Condition_listContext.class,0);
		}
		public Where_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_where_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterWhere_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitWhere_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitWhere_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Where_clauseContext where_clause() throws RecognitionException {
		Where_clauseContext _localctx = new Where_clauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_where_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(WHERE);
			setState(145);
			condition_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Condition_listContext extends ParserRuleContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode AND() { return getToken(D2wlParser.AND, 0); }
		public Condition_listContext condition_list() {
			return getRuleContext(Condition_listContext.class,0);
		}
		public Condition_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterCondition_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitCondition_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitCondition_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Condition_listContext condition_list() throws RecognitionException {
		Condition_listContext _localctx = new Condition_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			formula();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AND) {
				{
				setState(148);
				match(AND);
				setState(149);
				condition_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D2wlListener ) ((D2wlListener)listener).exitFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof D2wlVisitor ) return ((D2wlVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_formula);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				atom();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				disjunction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
